--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
 
         .bonus:hover, .button:hover {
-            background-color: #0056b3;
+            background-color: green;
         }
 
         .modal {
@@ -76,8 +76,8 @@
 </head>
 <body>
     <div class="container">
-        <h2>Bonus</h2>
-        <button class="bonus" onclick="showBonusModal()">300 Ksh</button>
+        <h2>welcome to Payhero</h2>
+        <button class="bonus" onclick="showBonusModal()"> Free 300 Ksh</button>
         
         <button class="button" onclick="alert('Coming soon')">Buy Airtime</button>
         <button class="button" onclick="alert('Coming soon')">Pay bills</button>
