--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
     <div class="login-form" id="loginPage">
         <h2>PAYHERO</h2>
         <form onsubmit="handleLogin(event)">
-            <input type="text" id="username" placeholder="Username" required>
-            <input type="password" id="password" placeholder="Password" required>
-            <button type="submit">Login</button>
+            <input type="text" id="username" placeholder="create your username" required>
+            <input type="password" id="password" placeholder="Enter new password" required>
+            <button type="submit">Signup</button>
         </form>
         <div class="social-signups">
             <button onclick="window.location.href='https://accounts.google.com/signup'">Sign up with Google</button>
